trunk/Archive2/c8/4c9d4860e87ead/output
main.cpp: In function 'int main()':
main.cpp:16:28: error: 'RVV' was not declared in this scope
    Matching final=RVV(match);
                            ^
